2010-02-07  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (boxplot_range_fiddling) src/plot2d.c (plot_boxplot):
	Make boxplot handling ignore any undefined points in the data set.

2010-02-06  Ethan A Merritt  <merritt@u.washington.edu>

	* NEWS docs/gnuplot.doc src/save.c src/set.c src/show.c src/tables.c
	src/tables.h src/term_api.h src/unset.c src/variable.c term/post.trm:

	Revise the search order for PostScript prologue files
	1) directory given by 'set psdir' [new command]
	2) directory given by environmental variable GNUPLOT_PS_DIR
	3) built-in header if present, otherwise default system directory
	4) loadpath [pretty useless, but that's what it did before]

2010-02-05  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (plot_boxplot): Fix off-by-one error in calculating
	quartile boundaries.

2010-02-03  Christoph Junghans (ottxor)

	* share/LaTeX/Makefile.am: Fix a logic error in testing the need
	to call texhash.

2010-02-03  Tatsuro Matsuoka  <tmacchant3@yahoo.co.jp>

	* src/command.c (pause_command): Loop of waitforinput() for "pause -1"
	in console mode of Windows.

2010-02-02  Christoph Junghans (ottxor)

	* configure.in share/LaTeX/Makefile.am:
	kpsexpand was used in share/LaTeX/Makefile.am even if it was not
	installed.  Add --texdir=DIR option to configure
	Bug #2934829

2010-02-02  Ethan A Merritt  <merritt@u.washington.edu>

	* src/term.c (test_term): Iniitialize linetype structure before loading
	dynamic linetypes.
	Bug: points all showed as dots if user linetypes were not defined

	* src/syscfg.h: Attempt to fix build problem under Sun Studio (no
	definition for _Bool).
	Bug #2915835

2010-02-01  Ethan A Merritt  <merritt@u.washington.edu>

	* term/canvas.trm: Fix typo in javascript output.
	Bug #2943778

2010-02-01  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/command.c (pause_command): Use the default message for Windows
	pause dialog.

2010-01-31  Tatsuro Matsuoka  <tmacchant3@yahoo.co.jp>
