@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: gplt_x11.c,v 1.196 2009/10/31 05:24:18 sfeam Exp $"); }
+static char *RCSid() { return RCSid("$Id: gplt_x11.c,v 1.197 2010/02/07 23:18:14 sfeam Exp $"); }
 #endif
 
 #define X11_POLYLINE 1
@@ -4852,7 +4852,6 @@ process_event(XEvent *event)
 */
 #define On(v) ( !strncasecmp(v, "on", 2) || !strncasecmp(v, "true", 4) )
 
-#define AppDefDir "/usr/lib/X11/app-defaults"
 #ifndef MAXHOSTNAMELEN
 #define MAXHOSTNAMELEN 64
 #endif
@@ -5014,10 +5013,23 @@ gnuplot: X11 aborted.\n", ldisplay);
 	        sizeof(appdefdir));
 	sprintf(buffer, "%s/%s", appdefdir, "Gnuplot");
     }
-# else /* !OS/2 */
-    strcpy(buffer, AppDefDir);
-    strcat(buffer, "/");
-    strcat(buffer, "Gnuplot");
+#else /* !OS/2 */
+    {
+    char *appdefdir;
+	if ((appdefdir = getenv("XAPPLRESDIR")) == NULL) {
+#ifdef XAPPLRESDIR
+    	    strcpy(buffer, XAPPLRESDIR);
+    	    strcat(buffer, "/");
+    	    strcat(buffer, "Gnuplot");
+#else
+	    buffer = NULL;
+#endif
+	} else {
+    	    strcpy(buffer, appdefdir);
+    	    strcat(buffer, "/");
+    	    strcat(buffer, "Gnuplot");
+	}
+    }
 #endif /* !VMS */
 
     dbApp = XrmGetFileDatabase(buffer);
