@@ -1,3 +1,9 @@
+2010-02-07  Christoph Junghans (ottxor)
+
+	* configure.in share/Makefile.am src/Makefile.am src/gplt_x11.c
+	src/variable.c: Configurable X11 application resource path.
+	Bug #2931287
+
 2010-02-07  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* src/graphics.c (boxplot_range_fiddling) src/plot2d.c (plot_boxplot):
